add `--enable-preview` for virtual threads in kapt
Signed-off-by: Debop <sunghyouk.bae@gmail.com>